# MoCli

./: .gitignore  CHANGELOG.md  LICENSE.txt  README-CN.md  README.md  README_CN.md  db.py  llm.py  main.py  pyproject.toml  screen.py  settings.py  stt.py  system_prompt copy.md  system_prompt.md  tray.py  triangle.py  tts.py  utils.py  voice.py  wakeup.py
.agents/rules/: python.md
settings/: __init__.py  about_page.py  cards.py  chat_page.py  cursor_page.py  llm_page.py  visual_page.py  voice_page.py  window.py
static/: 免责声明.md
